--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,11 @@
     <color name="colorPrimary">#E2E2E2</color>
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#FF7757</color>
+    <color name="themeRed">#FF3636</color>
     <color name="themePrimary">#588AFF</color>
     <color name="themeSecondary">#30CFFF</color>
+    <color name="themeGreen">#2CB153</color>
+    <color name="darkTheme">#3A3C99</color>
     <color name="dark1">#2B2B2B</color>
     <color name="dark2">#757575</color>
     <color name="dark3">#999999</color>
