--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
                 android:hint="@string/fui_password_hint"
                 android:textColorHint="@color/dark3"
                 app:boxBackgroundColor="@color/white"
+                app:passwordToggleEnabled="true"
                 app:boxStrokeWidth="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -75,6 +76,7 @@
                 <com.google.android.material.button.MaterialButton
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:text="@string/login"
+                    android:id="@+id/LoginButton"
                     android:onClick="loginUser"
                     app:cornerRadius="4dp"
                     android:backgroundTint="@color/themePrimary"
@@ -84,6 +86,7 @@
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:text="@string/register"
                     android:layout_marginStart="8dp"
+                    android:id="@+id/RegisterButton"
                     app:cornerRadius="4dp"
                     android:onClick="registerActivity"
                     android:backgroundTint="@color/themeGreen"
